--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formidable": "^3.5.4",
     "mammoth": "^1.11.0",
     "next": "16.1.4",
+    "openai": "^6.16.0",
     "pdf-parse": "^2.4.5",
     "pdf-parse-fork": "^1.2.0",
     "pdfjs-dist": "^5.4.530",
